--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,7 @@ address{
     line-height: 1.19;
     letter-spacing: 0.03em;
     
-    padding-top:24px;
-    padding-right:93px;
+    margin-right:93px
 }
 .logo-blue{
     color:var(--logo-blue-color) ;
@@ -72,10 +71,10 @@ address{
 .logo-black{
     color:var(--logo-black-color) ;
 }
-.link-porf{
-    padding-left:50px;
-    padding-right:50px;
+.site-nav .link-head:not(:last-child){
+    margin-right: 50px;
 }
+
 .mail-link,
 .tel-link,
 .site-nav .link {
@@ -88,9 +87,10 @@ address{
     color: var(--title-color);    
 }    
 .tel-link{
-    color: var(--text-color);    
-
-    padding-left:50px;
+    color: var(--text-color);
+}
+.head-list .mail:not(:last-child){
+    margin-right: 50px;
 }
 .link:focus{
     color: var(--logo-blue-color);
@@ -105,15 +105,10 @@ address{
 .container-head{
     display: flex;
     justify-content: space-between;
-}
-.one-of-team{
-    background-color: var(--white-color);
-    border-radius: 0px 0px 4px 4px;
 
-    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),    
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14),    
-    0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    background-color: var(--white-color);
 }
+
 
 /* Головний текст */
 .titel-service{
@@ -141,10 +136,17 @@ address{
     height: 50px;
     background-color: var(--logo-blue-color);
     color: var(--white-color);
+    border-color: var(--logo-blue-color);
     border-radius: 4px;
     cursor: pointer;
     display: inline-block;
-    margin:0 auto;    
+    margin:0 auto;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
 }
 .list .title{
     color: var(--title-color);
@@ -217,6 +219,14 @@ address{
 .team .text{
     padding-bottom: 30px;
 }
+.one-of-team {
+    background-color: var(--white-color);
+    border-radius: 0px 0px 4px 4px;
+
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+        0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
 .title-features{
     margin-top: 0;
     margin-bottom: 0;
@@ -238,16 +248,18 @@ address{
 }
 .mail-footer{
     display: inline-block;
-    padding-top: 9px;
-    padding-bottom: 9px;
+    
 }
 .logo-footer{
     display: inline-block;
-    padding-bottom: 20px;
-    padding-top: 60px;
+    margin-bottom: 20px;   
 }
 .list.footer{
+    padding-top: 60px;
     padding-bottom: 60px;
+}
+.bg-footer .mail:not(:last-child){
+    margin-bottom: 9px;
 }
 /* portfolio */
 .button-port{
@@ -256,13 +268,14 @@ address{
     font-size: 16px;
     line-height: 1.62;
     text-align: center;
-    letter-spacing: 0.03em;    
+     
     border-radius: 4px;
-    border-color: var(--button-bg-port);
+    border-color: transparent;
     font-family: Roboto,sans-serif;
-    cursor: pointer;
-
-    margin-left:8px;
+    cursor: pointer;    
+}
+.list-btn:not(:last-child){
+    margin-right:8px;
 }
 .btn-port{
     padding-top: 94px;
@@ -271,15 +284,13 @@ address{
     display: flex;
     justify-content: center;
 }
+.button-port.current,
 .button-port:hover{
     color: var(--white-color);
-    background-color: var(--logo-blue-color);
-    border-color: var(--logo-blue-color);
-}
-.button-port.current{
-    color: var(--white-color);
-    background-color: var(--logo-blue-color); 
-    border-color: var(--logo-blue-color);
+    background-color: var(--logo-blue-color);     
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08), 
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .title-collection{    
     color: var(--title-color);
@@ -296,7 +307,7 @@ address{
     line-height: 1.9;
 
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     padding-left: 24px;
 }
 .list-collection{
@@ -306,11 +317,14 @@ address{
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
 .decoration-link{
     text-decoration: none;
     }
-.link--collection{
+.link-collection{
     border: 1px solid #EEEEEE;
-    background: #FFFFFF;
-    
+    background: #FFFFFF;    
+}
+.link-collection:not(:nth-last-child(-n+3)){
+    margin-bottom: 30px;
 }
